# typr-osk-desktop

./: .clang-tidy  .gitignore  README.md  conanfile.txt  meson.build
.github/actions/deploy-qt-dlls/: action.yml
.github/workflows/: build-job.yml  build-macos.yml  build-test.yml  build-windows.yml  release.yml
.zed/: tasks.json
src/: input.hpp  main.cpp
src/backend/: README.md  backend.hpp  backend_macos.mm  backend_uinput.cpp  backend_windows.cpp  key_utils.cpp  output_listener_macos.mm  output_listener_windows.cpp  output_listener_x11.cpp
src/core/: input.cpp  input.hpp  layout.cpp  layout.hpp
src/input/: README.md  input.hpp  input_macos.mm  input_windows.cpp
src/ui/: ui.hpp  ui_macos.mm  ui_windows.cpp  widgets.hpp  widgets_macos.mm  widgets_windows.cpp  window.cpp  window.hpp
